[package]
name = "pros-simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
pros-sys = { version = "0.3", features = ["no-link"] }
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros", "sync"] }
wasmtime = { version = "13.0.0", features = ["async"] }
